# deadnews-template-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  cliff.toml  compose.dev.yml  compose.sample.yml  coverage.json  pyproject.toml
.github/workflows/: codeql.yml  docker.yml  main.yml
