[project]
name            = "deadnews-template-python"
description     = "Python Project Template"
readme          = "README.md"
license         = "MIT"
authors         = [{ name = "deadnews", email = "deadnewsgit@gmail.com" }]
classifiers     = ["Operating System :: OS Independent"]
keywords        = ["python", "template", "layout"]
dynamic         = ["version"]
requires-python = ">=3.14"

dependencies = ["fastapi>=0.122.0", "pydantic>=2.12.5", "uvicorn>=0.38.0"]

[dependency-groups]
dev = [
  "ruff>=0.14.11",
  "ty>=0.0.11",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "httpx>=0.28.1",
  "mkdocs>=1.6.1",
  "mkdocs-gen-files>=0.6.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-material>=9.7.0",
  "mkdocs-swagger-ui-tag>=0.7.2",
  "mkdocstrings>=1.0.0",
  "mkdocstrings-python>=2.0.0",
]

[project.scripts]
deadnews-template-python = "deadnews_template_python.__main__:main"

[project.urls]
Repository    = "https://github.com/deadnews/deadnews-template-python"
Changelog     = "https://github.com/deadnews/deadnews-template-python/CHANGELOG.md"
Documentation = "https://deadnews.github.io/deadnews-template-python"

[build-system]
requires      = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs   = "git"
style = "semver"

[tool.ruff]
line-length        = 99
format.line-ending = "lf"

[tool.ruff.lint]
flake8-tidy-imports.ban-relative-imports = "all"
pycodestyle.max-doc-length               = 129
pycodestyle.max-line-length              = 129
pydocstyle.convention                    = "google"

select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "ISC001",  # Checks for implicitly concatenated strings on a single line
  "PLR0913", # Too many arguments to function call
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*"     = ["ANN", "D", "E501", "PLC1901", "PLR2004", "S"]

[tool.pytest.ini_options]
addopts   = "--verbose --cov=./src --cov-report=term --cov-report=xml"
testpaths = ["tests"]
markers   = ["testcontainers"]

[tool.coverage.report]
exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
